Fixed horizontal overflow on start page for smaller devices

--- a/TheFlyingDutchman/css/index.css
+++ b/TheFlyingDutchman/css/index.css
@@ -39,8 +39,9 @@ body {
 
 #boat {
     position: absolute;
-    top: 30vh;
-    height: 60vh;
+    bottom: 10vh;
+    width: 90vw;
+    max-height: 60vh;
     z-index: -1;
     opacity: 0.2;
 }
